--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <h1 class="header__title">Tetiana <br>Kozynets</h1>
                         <h2 class="header__role">Front end developer</h2>
                     </div>
-                    <div>
+                    <div class="download__wrap">
                         <a href="https://www.dropbox.com/scl/fi/07ta61kq7lhp6jfblfebg/TETIANA-KOZYNETS-CV.pdf?rlkey=gmtzd9pllunc0hw9kgbgm4n51&dl=0"
                             class="download"></a>
                     </div>
