--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetiana Kozynets</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="main-container">
             <div class="header__wrap">
-                <img src="/img/IMG_7325.jpeg" alt="photo" class="avatar">
+                <img src="img/IMG_7325.jpeg" alt="photo" class="avatar">
                 <div class="header__container">
                     <div>
                         <h1 class="header__title">Tetiana <br>Kozynets</h1>
@@ -76,28 +76,28 @@
                         </h4>
                         <div class="contacts__list">
                             <div class="contacts__item">
-                                <div class="contacts__img"><img src="/img/location.png" alt="email"></div>
+                                <div class="contacts__img"><img src="img/location.png" alt="email"></div>
                                 <div class="contacts__text">Mahwah, New Jersey, 07430</div>
                             </div>
                             <div class="contacts__item">
-                                <div class="contacts__img"><img src="/img/phone.png" alt="phone"></div>
+                                <div class="contacts__img"><img src="img/phone.png" alt="phone"></div>
                                 <div class="contacts__text"><a class="link" href="tel:201-394-7053">+1(201)-394-7053</a>
                                 </div>
                             </div>
                             <div class="contacts__item">
-                                <div class="contacts__img"><img src="/img/email.png" alt="location"></div>
+                                <div class="contacts__img"><img src="img/email.png" alt="location"></div>
                                 <div class="contacts__text"><a class="link"
                                         href="mailto:shahdi007@gmail.com">shahdi007@gmail.com</a>
                                 </div>
                             </div>
                             <div class="contacts__item">
-                                <div class="contacts__img"><img src="/img/linkedin.png" alt="linkedin"></div>
+                                <div class="contacts__img"><img src="img/linkedin.png" alt="linkedin"></div>
                                 <div class="contacts__text"><a class="link"
                                         href="https://www.linkedin.com/in/tetiana-kozynets-551b03184/">LinkedIn</a>
                                 </div>
                             </div>
                             <div class="contacts__item">
-                                <div class="contacts__img"><img src="/img/github.png" alt="github"></div>
+                                <div class="contacts__img"><img src="img/github.png" alt="github"></div>
                                 <div class="contacts__text"><a class="link"
                                         href="https://github.com/purpoison">GitHub</a></div>
                             </div>
@@ -151,7 +151,7 @@
                             <p class="experience__address">Paramus, United States
                             </p>
                             <div class="experience__link">
-                                <div class="experience__link-img"><img src="/img/world-wide-web.png" alt="link"></div>
+                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
                                 <a class="link" href="https://www.fortepianonj.com/">
                                     https://www.fortepianonj.com/</a>
                             </div>
@@ -165,7 +165,7 @@
                             <p class="experience__address">Paramus, United States
                             </p>
                             <div class="experience__link">
-                                <div class="experience__link-img"><img src="/img/world-wide-web.png" alt="link"></div>
+                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
                                 <a class="link" href="https://www.fortepianonj.com/">
                                     https://www.fortepianonj.com/</a>
                             </div>
@@ -178,21 +178,21 @@
                         <div class="portfolio__item">
                             <p class="portfolio__title">game project</p>
                             <a href="https://purpoison.github.io/game-project/index.html" class="portfolio__img"><img
-                                    src="/img/game.png" alt="game"></a>
+                                    src="img/game.png" alt="game"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">tour guid website</p>
                             <a href="https://purpoison.github.io/tetianakozynets/" class="portfolio__img"><img
-                                    src="/img/tour.png" alt="tour"></a>
+                                    src="img/tour.png" alt="tour"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">e-store project</p>
                             <a href="https://purpoison.github.io/e-store-project" class="portfolio__img"><img
-                                    src="/img/e-store.png" alt="store"></a>
+                                    src="img/e-store.png" alt="store"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">cuda website</p>
-                            <a href="https://purpoison.github.io/cuda/" class="portfolio__img"><img src="/img/cuda.png"
+                            <a href="https://purpoison.github.io/cuda/" class="portfolio__img"><img src="img/cuda.png"
                                     alt="cude"></a>
                         </div>
                     </div>
