--- a/index.html
+++ b/index.html
@@ -157,17 +157,20 @@
                             </div>
                         </div>
                         <div>
-                            <p class="light-text">OCT 2022 - PRESENT
+                            <p class="light-text">JAN 2018 – NOV 2022
 
                             </p>
-                            <p>Forte Piano Music Co. <br>
-                                Wordpress Content Creator</p>
-                            <p class="experience__address">Paramus, United States
+                            <p>SI LOCAL ROADS OF KHMELNYTSKYI
+                                REGION
+                                <br>
+                                LEADING ENGINEER
+                            </p>
+                            <p class="experience__address">Khmelnytskyi, Ukraine
                             </p>
                             <div class="experience__link">
                                 <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
                                 <a class="link" href="https://www.fortepianonj.com/">
-                                    https://www.fortepianonj.com/</a>
+                                    https://dusmdh.km.ua/</a>
                             </div>
                         </div>
                     </div>
