changes in experience

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                         <h2 class="header__role">Front end developer</h2>
                     </div>
                     <div class="download__wrap">
-                        <a href="https://www.dropbox.com/scl/fi/07ta61kq7lhp6jfblfebg/TETIANA-KOZYNETS-CV.pdf?rlkey=gmtzd9pllunc0hw9kgbgm4n51&dl=0"
-                            class="download"></a>
+                        <a href="https://www.dropbox.com/scl/fi/dpmrgcg8vwsperd1v8y48/TETIANA-KOZYNETS-CV.pdf?rlkey=94a1gkmhvhknluphp3a2a486d&st=ygjuxmmi&dl=0"
+                            target=”_blank” class="download"></a>
                     </div>
 
                 </div>
@@ -58,12 +58,12 @@
                             skills
                         </h4>
                         <ul class="skills__list">
+                            <li>JavaScript</li>
+                            <li>React</li>
                             <li>HTML</li>
                             <li>CSS/SCSS</li>
                             <li>Bootstrap</li>
-                            <li>JavaScript</li>
                             <li>JSON</li>
-                            <li>React</li>
                             <li>PHP/phpMyAdmin</li>
                             <li>SQL/MySQL</li>
                             <li>Adobe Photoshop/Figma</li>
@@ -107,6 +107,58 @@
 
             </article>
             <main class="main">
+                <section class="experience">
+                    <h4 class="title">
+                        experience
+                    </h4>
+                    <div class="experience__wrap">
+                        <div>
+                            <p class="light-text">Nov 2023 - Present
+                            </p>
+                            <p>Aztec Software</p>
+                            <p class="experience__address">Morristown, United States
+                            </p>
+                            <div class="experience__link">
+                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
+                                <a class="link" href="https://www.aztecsoftware.com/" target=”_blank”>
+                                    https://www.aztecsoftware.com/</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="experience__wrap">
+                        <div>
+                            <p class="light-text">OCT 2022 - PRESENT
+
+                            </p>
+                            <p>Forte Piano Music Co. <br>
+                                Wordpress Content Creator</p>
+                            <p class="experience__address">Paramus, United States
+                            </p>
+                            <div class="experience__link">
+                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
+                                <a class="link" href="https://www.fortepianonj.com/" target=”_blank”>
+                                    https://www.fortepianonj.com/</a>
+                            </div>
+                        </div>
+                        <div>
+                            <p class="light-text">JAN 2018 – NOV 2022
+
+                            </p>
+                            <p>SI LOCAL ROADS OF KHMELNYTSKYI
+                                REGION
+                                <br>
+                                LEADING ENGINEER
+                            </p>
+                            <p class="experience__address">Khmelnytskyi, Ukraine
+                            </p>
+                            <div class="experience__link">
+                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
+                                <a class="link" href="https://www.fortepianonj.com/" target=”_blank”>
+                                    https://dusmdh.km.ua/</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="education">
                     <h4 class="title">
                         education
@@ -135,44 +187,6 @@
                         <p>Ternopil National Pedagogical University <br>
                             Ternopil, Ukraine <br>
                             Master Degree / PSYCHOLOGY</p>
-                    </div>
-                </section>
-                <section class="experience">
-                    <h4 class="title">
-                        experience
-                    </h4>
-                    <div class="experience__wrap">
-                        <div>
-                            <p class="light-text">OCT 2022 - PRESENT
-
-                            </p>
-                            <p>Forte Piano Music Co. <br>
-                                Wordpress Content Creator</p>
-                            <p class="experience__address">Paramus, United States
-                            </p>
-                            <div class="experience__link">
-                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
-                                <a class="link" href="https://www.fortepianonj.com/">
-                                    https://www.fortepianonj.com/</a>
-                            </div>
-                        </div>
-                        <div>
-                            <p class="light-text">JAN 2018 – NOV 2022
-
-                            </p>
-                            <p>SI LOCAL ROADS OF KHMELNYTSKYI
-                                REGION
-                                <br>
-                                LEADING ENGINEER
-                            </p>
-                            <p class="experience__address">Khmelnytskyi, Ukraine
-                            </p>
-                            <div class="experience__link">
-                                <div class="experience__link-img"><img src="img/world-wide-web.png" alt="link"></div>
-                                <a class="link" href="https://www.fortepianonj.com/">
-                                    https://dusmdh.km.ua/</a>
-                            </div>
-                        </div>
                     </div>
                 </section>
                 <section class="portfolio">
