new experience and other small changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                         <a href="https://www.dropbox.com/scl/fi/dpmrgcg8vwsperd1v8y48/TETIANA-KOZYNETS-CV.pdf?rlkey=94a1gkmhvhknluphp3a2a486d&st=ygjuxmmi&dl=0"
                             target=”_blank” class="download"></a>
                     </div>
-
                 </div>
             </div>
 
@@ -93,13 +92,14 @@
                             <div class="contacts__item">
                                 <div class="contacts__img"><img src="img/linkedin.png" alt="linkedin"></div>
                                 <div class="contacts__text"><a class="link"
-                                        href="https://www.linkedin.com/in/tetiana-kozynets-551b03184/">LinkedIn</a>
+                                        href="https://www.linkedin.com/in/tetiana-kozynets-551b03184/"
+                                        target=”_blank”>LinkedIn</a>
                                 </div>
                             </div>
                             <div class="contacts__item">
                                 <div class="contacts__img"><img src="img/github.png" alt="github"></div>
-                                <div class="contacts__text"><a class="link"
-                                        href="https://github.com/purpoison">GitHub</a></div>
+                                <div class="contacts__text"><a class="link" href="https://github.com/purpoison"
+                                        target=”_blank”>GitHub</a></div>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,9 @@
                         <div>
                             <p class="light-text">Nov 2023 - Present
                             </p>
-                            <p>Aztec Software</p>
+                            <p class="experience__company">Aztec Software</p>
+                            <p class="experience__title"><i>Front End Developer</i></p>
+                            </p>
                             <p class="experience__address">Morristown, United States
                             </p>
                             <div class="experience__link">
@@ -130,8 +132,8 @@
                             <p class="light-text">OCT 2022 - PRESENT
 
                             </p>
-                            <p>Forte Piano Music Co. <br>
-                                Wordpress Content Creator</p>
+                            <p class="experience__company">Forte Piano Music Co.</p>
+                            <p class="experience__title"><i>Wordpress Content Creator</i></p>
                             <p class="experience__address">Paramus, United States
                             </p>
                             <div class="experience__link">
@@ -144,10 +146,9 @@
                             <p class="light-text">JAN 2018 – NOV 2022
 
                             </p>
-                            <p>SI LOCAL ROADS OF KHMELNYTSKYI
-                                REGION
-                                <br>
-                                LEADING ENGINEER
+                            <p class="experience__company">SI LOCAL ROADS OF KHMELNYTSKYI
+                                REGION</p>
+                            <p class="experience__title"> <i>Leading Engineer</i>
                             </p>
                             <p class="experience__address">Khmelnytskyi, Ukraine
                             </p>
@@ -171,16 +172,16 @@
                             WEB DEVELOPER</p>
                     </div>
                     <div class="education__item">
-                        <p class="light-text">SEPT 2019 – FEB 2020</p>
-                        <p>DEV ACADEMY <br>
-                            Khmelnytskyi, Ukraine <br>
-                            FRONT-END DEVELOPER</p>
-                    </div>
-                    <div class="education__item">
                         <p class="light-text">SEPT 2019 – MAR 2021</p>
                         <p>Vasyl' Stus Donetsk National University <br>
                             Vinnytsia, Ukraine <br>
                             Master Degree / PUBLIC MANAGEMENT AND ADMINISTRATION</p>
+                    </div>
+                    <div class="education__item">
+                        <p class="light-text">SEPT 2019 – FEB 2020</p>
+                        <p>DEV ACADEMY <br>
+                            Khmelnytskyi, Ukraine <br>
+                            FRONT-END DEVELOPER</p>
                     </div>
                     <div class="education__item">
                         <p class="light-text">SEPT 2011 – JUNE 2017</p>
