--- a/index.html
+++ b/index.html
@@ -195,23 +195,45 @@
                     <div class="portfolio__wrap">
                         <div class="portfolio__item">
                             <p class="portfolio__title">game project</p>
-                            <a href="https://purpoison.github.io/game-project/index.html" class="portfolio__img"><img
-                                    src="img/game.png" alt="game"></a>
+                            <a href="https://purpoison.github.io/game-project/index.html" class="portfolio__img"
+                                target="_blank"><img src="img/game.png" alt="game"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">tour guid website</p>
-                            <a href="https://purpoison.github.io/tetianakozynets/" class="portfolio__img"><img
-                                    src="img/tour.png" alt="tour"></a>
+                            <a href="https://purpoison.github.io/tetianakozynets/" class="portfolio__img"
+                                target="_blank"><img src="img/tour.png" alt="tour"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">e-store project</p>
-                            <a href="https://purpoison.github.io/e-store-project" class="portfolio__img"><img
-                                    src="img/e-store.png" alt="store"></a>
+                            <a href="https://purpoison.github.io/e-store-project" class="portfolio__img"
+                                target="_blank"><img src="img/e-store.png" alt="store"></a>
                         </div>
                         <div class="portfolio__item">
                             <p class="portfolio__title">cuda website</p>
-                            <a href="https://purpoison.github.io/cuda/" class="portfolio__img"><img src="img/cuda.png"
-                                    alt="cude"></a>
+                            <a href="https://purpoison.github.io/cuda/" class="portfolio__img" target="_blank"><img
+                                    src="img/cuda.png" alt="cude"></a>
+                        </div>
+                    </div>
+                    <div class="portfolio__wrap">
+                        <div class="portfolio__item">
+                            <p class="portfolio__title">CT SkillTest</p>
+                            <a href="https://purpoison.github.io/CT_SkillTest/" class="portfolio__img"
+                                target="_blank"><img src="img/CT_SkillTest.png" alt="skilltest"></a>
+                        </div>
+                        <div class="portfolio__item">
+                            <p class="portfolio__title">user interface designer</p>
+                            <a href="https://purpoison.github.io/User-Interface-Designer/" class="portfolio__img"
+                                target="_blank"><img src="img/User-Interface-Designer.png" alt="designer"></a>
+                        </div>
+                        <div class="portfolio__item">
+                            <p class="portfolio__title">alivio</p>
+                            <a href="https://purpoison.github.io/alivio/" class="portfolio__img" target="_blank"><img
+                                    src="img/alivio.png" alt="alivio"></a>
+                        </div>
+                        <div class="portfolio__item">
+                            <p class="portfolio__title">jewelry website</p>
+                            <a href="https://purpoison.github.io/jewelry-website/" class="portfolio__img"
+                                target="_blank"><img src="img/jewelry-website.png" alt="jewelry"></a>
                         </div>
                     </div>
 
