--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h2 class="header__role">Front end developer</h2>
                     </div>
                     <div class="download__wrap">
-                        <a href="https://www.dropbox.com/scl/fi/dpmrgcg8vwsperd1v8y48/TETIANA-KOZYNETS-CV.pdf?rlkey=94a1gkmhvhknluphp3a2a486d&st=ygjuxmmi&dl=0"
+                        <a href="https://www.dropbox.com/scl/fi/0jarqgv02xf0k5d0hva9a/Tetiana-Kozynets-CV.docx?rlkey=il5hr0wx0s1w46eo8wd6ri4zm&st=vy7o4qwc&dl=0"
                             target=”_blank” class="download"></a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <div class="contacts__item">
                                 <div class="contacts__img"><img src="img/email.png" alt="location"></div>
                                 <div class="contacts__text"><a class="link"
-                                        href="mailto:shahdi007@gmail.com">shahdi007@gmail.com</a>
+                                        href="mailto:tetiana.kozynetss@gmail.com">tetiana.kozynetss@gmail.com</a>
                                 </div>
                             </div>
                             <div class="contacts__item">
