--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h2 class="header__role">Front end developer</h2>
                     </div>
                     <div class="download__wrap">
-                        <a href="https://www.dropbox.com/scl/fi/0jarqgv02xf0k5d0hva9a/Tetiana-Kozynets-CV.docx?rlkey=il5hr0wx0s1w46eo8wd6ri4zm&st=vy7o4qwc&dl=0"
+                        <a href="https://www.dropbox.com/scl/fi/ct20jwv1mm30bljpik8hh/Tetiana-Kozynets-CV.pdf?rlkey=hmolrqznecahj2lrsbf9qrsei&st=qei8cnyp&dl=0"
                             target=”_blank” class="download"></a>
                     </div>
                 </div>
