--- a/index.html
+++ b/index.html
@@ -126,14 +126,11 @@
                                     https://www.aztecsoftware.com/</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="experience__wrap">
                         <div>
-                            <p class="light-text">OCT 2022 - PRESENT
-
+                            <p class="light-text">OCT 2022 - Nov 2023
                             </p>
                             <p class="experience__company">Forte Piano Music Co.</p>
-                            <p class="experience__title"><i>Wordpress Content Creator</i></p>
+                            <p class="experience__title"><i>Wordpress Developer</i></p>
                             <p class="experience__address">Paramus, United States
                             </p>
                             <div class="experience__link">
@@ -142,6 +139,8 @@
                                     https://www.fortepianonj.com/</a>
                             </div>
                         </div>
+                    </div>
+                    <div class="experience__wrap">
                         <div>
                             <p class="light-text">JAN 2018 – NOV 2022
 
